fixed overlap problem

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -6,7 +6,7 @@
     /* reference the color by using @color-name */
     color: @text;
     font-size: 12px;
-    font-family: "Hack Nerd";
+    font-family: "Hack Nerd Font Propo";
 }
 
 #clock {
